--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.1",
+    "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
-    "highcharts": "^8.0.0",
-    "highcharts-react-official": "^2.2.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.13.1",
