--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "antd": "^4.6.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "localforage": "^1.9.0",
+    "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.13.1",
@@ -18,6 +22,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^4.3.2"
